# telemetry-validation

./: .env-example  .gitignore  README.md  databases.ipynb  filtered_positions.csv  pyproject.toml
core/: __init__.py  database.py  utils.py
reports/: positions.ipynb  positions.md
reports/cars/: cars.csv  cars.ipynb
reports/dict_events/: dict_events.csv  dict_events.ipynb
reports/events/: events.ipynb  events.md
reports/geodata/: geodata.ipynb  geodata.md  geodata_sample.csv
reports/locations/: locations.csv  locations.ipynb  locations.md
reports/positions/: position_original.xlsx  position_tratada.xlsx  positions.ipynb  positions.md
telemetria/: README.md  mix_positions_positions_20240603.parquet
