[tool.poetry]
name = "telemetria"
version = "0.1.0"
description = ""
authors = ["Marcelo Borges"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.1.2"
install = "^1.3.5"
google-cloud-bigquery = "^3.25.0"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
google-cloud-storage = "^2.17.0"
python-dotenv = "^1.0.1"
duckdb = {extras = ["gcs"], version = "^1.0.0"}
gcsfs = "^2024.6.1"
httpfs = "^0.0.1"
google-auth = "^2.31.0"
geopandas = "^1.0.1"
matplotlib = "^3.9.1"
googlemaps = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
